--- a/src/pages/Main/Map/Filters/Filters.scss
+++ b/src/pages/Main/Map/Filters/Filters.scss
@@ -65,7 +65,8 @@
             cursor: pointer;
             font-weight: 100;
             margin-left: auto;
-            transform: scale(5);
+            margin-right: 15px;
+            transform: scale(3);
             font-size: unset;
         }
 
